fixed footer on mobile and added navigation bar
there was a problem with the footer part on mobile phone. I changed it to grid from flex and removed one div closing tag. Also, added navogation bar as per my wireframe

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,32 +7,11 @@ body {
   .side {
     grid-area: side;
     font-size: large;
-    align-items: left;
-    align-self: flex-start;
     text-transform: capitalize;
     background-color: gray;
     
   }
-.whatido {
-  text-align: center;
-  grid-area: whatido;
-  text-shadow: 1px 0 5px gray;
-  background-origin: border-box;
-  
-}
-.whatido-des {
-  background-color: teal;
-  color: white;
-  background-origin: padding-box;
-  box-shadow: 0 0 5px black;
-  text-align: center;
-  box-sizing: content-box;
-  grid-area: whatdes;
-  padding: 30px;
-  margin: 10px;
-  width: auto;
-  height: 50px;
-}
+
   .dp {
       border-radius: 10px;
       padding: 35px;
@@ -88,41 +67,86 @@ body {
   
   .header {
     grid-area: header;
-    background-color: royalblue;
-    text-align: left;
+    background-color: black;
+    padding: 0 20px;
+    color: white;
+    height: 100px;
+
+    
+    }
+    
+
+    .title {
+      float: left;
+      font-family: fantasy;
+      color: white;
+      line-height: 100px;
+      padding: 0 15px;
+    
     }
 
-    .photo1 {
-        border-radius: 10%;
-        grid-area: photo1;
-        justify-content: center;
-        justify-items: center;
-        align-items: center;
-        border-radius: 10%;
-        margin: 2px;
-        padding: 2px;
-        align-content: center;
+.nav-mob {
+  float: right;
+  line-height: 100px;
+  
+
+}
+.nav-mob a {
+  color: white;
+  text-decoration: none;
+  padding: 0 10px;
+  transition: .5s;
+}
+.display-nav-mob, .hide-nav-mob {
+  transition: .5s;
+}
+.nav-mob a:hover, .display-nav-mob:hover, .hide-nav-mob:hover {
+  color: #9e9e9e;
+
+}
+
+    .whatido {
+      text-align: center;
+      grid-area: whatido;
+      text-shadow: 1px 0 5px gray;
+      background-origin: border-box;
+      
     }
+    .whatido-des {
+      background-color: teal;
+      color: white;
+      grid-column: span 2;
+      background-origin: padding-box;
+      box-shadow: 0 0 5px black;
+      text-align: center;
+      box-sizing: content-box;
+      grid-area: whatdes;
+      padding: 30px;
+      margin: 10px;
+      width: auto;
+      height: 50px;
+    }
+
     .brdr {
       background-color: gray;
-      background-origin: border-box;
+      
       box-shadow: 2px 2px 5px black;
-      padding: 20px;
-      margin: 40px;
+      grid-area: brdr;
+      padding: 10px;
+      margin: 10px;
+      height: 170px;
     
     }
    
     .social {
       grid-area: social;
       background-color: rgba(0, 0, 0, 0.308);
-      background-origin: padding-box;
-      box-sizing: content-box;
       box-shadow: 0 5px 5px darkgray;
-      padding: 50px;
-      margin: 40px;
       color: white;
-      
-      text-align: center;
+      height: 100px;
+     text-align: center;
+     padding: 10px;
+     margin: 25px;
     }
 
     i {
@@ -134,49 +158,58 @@ body {
     grid-area: footer;
     text-align: center;
     background-color: rgba(248, 8, 8, 0.418);
+    box-shadow:5px 0 2px rgba(0, 0, 0, 0.534);
     color: white;
-    padding: 50px;
-  margin: 40px;
-    justify-content: center;
-    align-self: center;
+    margin: 20px;
+   width: auto;
     
   }
+  
   
   .contnr {
           display: grid;
           height: 100vh;
-      grid-gap: 15px;
+      grid-gap: 12px;
           grid-template-columns: 1fr 3fr 1fr;
           grid-template-areas:
           "header  header  header"
           "side content content"
-          "side whatido whatido"
+          "null whatido whatido"
           "whatdes whatdes whatdes"
-          "social social social" 
-          "footer  footer  footer";
+          "social social social"
+          "footer footer footer"
+          "brdr brdr brdr";
           
       }
   
   
   @media screen and (max-width:640px) {
+    .content {
+      grid-column: span 3;
+
+    }
       .contnr {
-          display: flex;
-          max-width: 900px;
-          justify-content: space-between;
-          flex-direction: column;
-          font-size: 20px;  
-          text-align: center;
-          align-self: center;
-          flex-wrap: nowrap;
-          align-content: center;
-          padding: auto;
-          margin: auto;
+        display: grid;
           height: 100vh;
+      grid-gap: 10px;
+          grid-template-columns: 1fr 2fr 1fr;
+          grid-template-areas:
+          "header  header  header"
+          "side side side"
+          "content content content"
+          "whatido whatido whatido"
+          "whatdes whatdes whatdes"
+          "social social social"
+          "footer footer footer"
+          "brdr brdr brdr"
+          
+          
         }
         .side {
            margin-bottom: 10px;
            margin-top: 10px;
            align-self: center;
+           align-content: center;
         }
 
   }
